dxscale/sales/main/objects/OpportunityControlSwitch__c/OpportunityControlSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to control automations on the opportunity object</description>
    <label>Opportunity Control Switch</label>
</CustomObject>