dxscale/sales/main/objects/OpportunityControlSwitch__c/fields/RunProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of process builders on the opportunity object</description>
    <inlineHelpText>Checkbox to control the execution of process builders on the opportunity object</inlineHelpText>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>