dxscale/sales/main/objects/OpportunityControlSwitch__c/fields/SendOutBoundMessages__c.field-meta.xml
<CustomField>
    <fullName>SendOutBoundMessages__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the issuing of opportunity outbound messages</description>
    <inlineHelpText>Checkbox to control the issuing of opportunity outbound messages</inlineHelpText>
    <label>Send Outbound Messages</label>
    <type>Checkbox</type>
</CustomField>